[fix] admin: metadata editor [fix] builder: sidebar z-index [fix] builder: remove <html> elements from builder inputs

--- a/src/classes/pages/assets/style.css
+++ b/src/classes/pages/assets/style.css
@@ -1349,6 +1349,7 @@ br:not(.cm-line br) {
     flex-direction: column;
     animation: SlideInFromLeft 0.15s 0s running;
     overflow: auto;
+    z-index: 10000000;
 }
 
 .builder\:sidebar button,
